docs/v2.0.0/Version-History.md
## [Version History]()

| Version | Last Updated      | Author | Release Note                                                                                                                                                                                         | 
|---------|-------------------| ---- |------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| v2.0.3  | 13 Jan, 2026 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Bug Fixes and Improvement                                                                                                                                                                                                                      |
| v2.0.2  | 31 Dec, 2025 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Bug Fixes and Improvement                                                                                                                                                                                                                      |
| v2.0.1  | 17 Oct, 2025 | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Bug Fixes and Improvement                                                                                                                                                                                                                      |
| v2.0.0  | 15 Sep, 2025     | Mappls API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | - Authentication and authorization mechanisms have been revised. </br> - Updated minimum Android version to 21. </br> - Added Support for 16 KB Page Sizes in Android </br> - Added SPM(Swift Package Manager in IOS) </br> - Initial Web Support                                                                                    |